--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,22 @@
 
 .img-parc {
     width: 200px;
+    margin: 50px;
+}
+
+h2 {
+    margin-top: 50px;
 }
 
 body {
     font-family: sans-serif;
     background-color: rgb(206, 195, 156);
+}
+
+p {
+    font-family: Verdana;
+    font: 20px;
+    margin: 30px;
 }
 
 .h-text {
@@ -29,11 +40,22 @@ body {
 }
 
 .margin {
-    margin-top: 50px;
+    margin-top: 80px;
     margin-bottom: 50px;
 }
 
 .margin-img {
     margin-top: 30px;
     margin-bottom: 50px;
+}
+
+.img-tam {
+    width: 500px;
+    height: 500px;
+}
+
+.bg-footer {
+    background-color: black;
+    color: white;
+    padding-bottom: 80px;
 }
